# Robot-Pathfinding-ROS2-Simulation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  tests.yml
src/robot_pathfinding_bringup/: package.xml  setup.cfg  setup.py
src/robot_pathfinding_bringup/config/: bridge.yaml
src/robot_pathfinding_bringup/launch/: nav.launch.py  simulation.launch.py
src/robot_pathfinding_bringup/robot_pathfinding_bringup/: __init__.py
src/robot_pathfinding_bringup/test/: test_bringup_package.py
src/robot_pathfinding_description/: package.xml  setup.cfg  setup.py
src/robot_pathfinding_description/models/: README.md
src/robot_pathfinding_description/robot_pathfinding_description/: __init__.py
src/robot_pathfinding_description/test/: test_description_package.py
src/robot_pathfinding_description/urdf/: robot.urdf.xacro
src/robot_pathfinding_description/worlds/: grid_world.sdf
src/robot_pathfinding_nav/: package.xml  setup.cfg  setup.py
src/robot_pathfinding_nav/robot_pathfinding_nav/: __init__.py  grid_adapter.py  pathfinding_node.py
src/robot_pathfinding_nav/test/: test_grid_adapter.py  test_node_smoke.py
