<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_pathfinding_nav</name>
  <version>0.1.0</version>
  <description>
    ROS 2 pathfinding node that wraps the Robot-Pathfinding-Core library: it
    converts an OccupancyGrid into a Core Grid, plans with a selectable Core
    algorithm (A*, BFS, DFS, Dijkstra), and publishes the result as a Path.
  </description>
  <maintainer email="richardnagy551@gmail.com">Ricsi1231</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!--
    robot-pathfinding-core is a plain PyPI-style dependency installed via pip
    (see the Makefile / CI), not a rosdep key, so it is intentionally not listed
    as a <depend>. It is imported at runtime as the `robot_pathfinding` module.
  -->

  <!-- Linting/formatting is handled by ruff (parity with Core), so the ament
       flake8/pep257/copyright lint tests are intentionally omitted. -->
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
